src/test/ui/existential_types/generic_duplicate_param_use6.stderr
error: concrete type differs from previous defining existential type use
  --> $DIR/generic_duplicate_param_use6.rs:14:1
   |
LL | / fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
LL | |
LL | |     (u, t)
LL | | }
   | |_^ expected `(T, T)`, got `(U, T)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use6.rs:10:1
   |
LL | / fn two<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
LL | |     (t, t)
LL | | }
   | |_^

error: aborting due to previous error

